--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<h1>Closed for repairs</h1>
+	<h1>New cool blog</h1>
+	<script async defer src="https://static.cdn.prismic.io/prismic.js?new=true&repo=wonka-lilly"></script>
 </body>
