--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JB0YJL6M62"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JB0YJL6M62');
+</script>
 	<meta charset="UTF-8">
 	<title>Lookshop</title>
 	<link rel="stylesheet" href="css/style.css">
+	
 </head>
 <body>
 	<h1>New cool blog</h1>
