back to the old design

--- a/index.html
+++ b/index.html
@@ -15,6 +15,263 @@
 	
 </head>
 <body>
-	<h1>New cool blog</h1>
-	<script async defer src="https://static.cdn.prismic.io/prismic.js?new=true&repo=wonka-lilly"></script>
+	<div class="wrapper">
+		<header class="header">
+			<span class="tlf"> custom care: 123 456 789 </span>
+			<div class="tools">
+				<span class="currency"> $ US </span>
+				<div class="acc"><a href="#">my account</a></div>
+				<a href="#" class="search"><img src="img/iPhone/search.png"></a>
+			</div>	
+		</header>
+
+		<img src="img/iPhone/logo.png" alt="" class="logo">
+		
+		<div class="cart-all clearfix">
+			<div class="prev-cart"><p>Your cart</p>
+			</div>
+			<div class="cart">
+				<img src="img/iPhone/cart.png">
+				<span>0 items  |  $ 0</span>
+			</div>	
+		</div>
+		<div class="menu-for-desktop">
+			<ul>
+				<li><a href="#">new</a></li>
+				<li><a href="#">designers</a></li>
+				<li><a href="#">women</a></li>
+				<li><a href="#">men</a></li>
+				<li><a href="#">clearance</a></li>
+			</ul>
+		</div>
+	
+		<div class="menu clearfix"> 
+				<input type="checkbox" name="accordion" id="ac-1">
+				<label for="ac-1">menu</label>
+				<article>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error culpa provident ut ex ducimus. Dignissimos, nobis distinctio libero nemo. Accusamus id asperiores dolor repellendus, omnis mollitia adipisci at nesciunt veniam.
+					</p>
+				</article>
+		</div>
+
+		<div class="banner clearfix">
+			<a href="#" class="ban-ctrl previous"></a>
+			<a href="#" class="ban-ctrl next"></a> 
+			<button class="ban-btn style-for-buttons">shop now  <b>&#707;</b></button>
+		</div>
+			
+
+		<div class="communication clearfix">
+			<div class="send-mail clearfix">
+				<label for="send-mail">Stay updated</label>
+				<input type="text" id="send-mail" placeholder="Your e-mail adress">
+				<button class="send-button style-for-buttons"> + </button>
+			</div>
+
+			<div class="social-tools">
+				<p> Find us here </p>
+				<div class="social-networks">
+					<a href="#"><img src="img/iPhone/facebook.png" alt=""></a>
+					<a href="#"><img src="img/iPhone/twitter.png" alt=""></a>
+					<a href="#"><img src="img/iPhone/pinterest.png" alt=""></a>
+				</div>
+			</div>
+		</div>
+		<img src="img/iPad/news.jpg" class="news">
+
+
+		<main class="main">
+			<div class="main_assortment">
+
+				<div class="hot clearfix assort-category"> 
+					<input type="checkbox"  class="hot" id="ac-hot" checked>
+					<label for="ac-hot">what's hot?</label>
+					<div class="designers assort-category">
+					<input type="checkbox"  class="designers" id="ac-designers">
+					<label for="ac-designers">designers</label>
+				</div>
+				<div class="featured assort-category">
+					<input type="checkbox"  class="featured" id="ac-featured">
+					<label for="ac-featured">featured</label>
+				</div>
+				<div class="latest assort-category">
+					<input type="checkbox"  class="latest" id="ac-latest">
+					<label for="ac-latest">latest</label>
+				</div>
+					<article>
+						<div class="hot-clothes">
+							<div class="items">						
+								<div class="item-hot-1 item-for-mobile clearfix">
+									<img src="img/iPhone/dress-1.jpg">
+									<span class="name">MIMOSA LACE DRESS</span><br>
+									<span class="price">$76.95</span>
+									<button class="add-item style-for-buttons"><p>add to cart</p>
+									</button>
+								</div>
+								<div class="item-hot-2 item-for-mobile clearfix">
+										<img src="img/iPhone/dress-2.png">
+										<span class="name">WishVitalise Dress</span><br>
+										<span class="price">$96.55</span>
+										<button class="add-item style-for-buttons"><p>add to cart</p>
+										</button>
+								</div>
+								<div class="item-hot-3 item-for-tablet clearfix">
+										<img src="img/iPad/item-hot3.jpg">
+										<span class="name">WishVitalise Dress</span><br>
+										<span class="price">$96.55</span>
+										<button class="add-item style-for-buttons"><p>add to cart</p>
+										</button>
+								</div>
+								<div class="item-hot-4 item-for-tablet sale-icon clearfix">
+									<img src="img/iPad/item-hot4.jpg">
+									<span class="name">WishVitalise Dress</span><br>
+									<span class="price">$96.55</span>
+									<button class="add-item style-for-buttons"><p>add to cart</p>
+									</button>
+								</div>
+								<div class="item-hot-5 item-for-tablet clearfix">
+									<img src="img/iPad/item-hot5.jpg">
+									<span class="name">WishVitalise Dress</span><br>
+									<span class="price">$96.55</span>
+									<button class="add-item style-for-buttons"><p>add to cart</p>
+									</button>
+								</div>
+								<div class="item-hot-6 sale-icon item-for-pc clearfix">
+									<img src="img/iPhone/dress-2.png">
+									<span class="name">WishVitalise Dress</span><br>
+									<span class="price">$96.55</span>
+									<button class="add-item style-for-buttons"><p>add to cart</p>
+									</button>
+								</div>
+							</div>
+							<button class="load-more">load more</button> 
+						</div>
+					</article>
+				</div>
+				
+			</div>
+
+			<div class="sale clearfix">
+					<div class="off-img"></div>
+					<div class="items">						
+						<div class="item-sale-1 item-for-mobile">
+							<img src="img/iPhone/bag1.jpg">
+							<span class="name">MIMOSA LACE DRESS</span><br>
+							<span class="price">$76.95</span>
+							<button class="add-item style-for-buttons"><p>add to cart</p>
+							</button>
+						</div>
+						<div class="item-sale-2 item-for-mobile clearfix">
+							<img src="img/iPhone/bag2.jpg">
+							<span class="name">MIMOSA LACE DRESS</span><br>
+							<span class="price">$76.95</span>
+							<button class="add-item style-for-buttons"><p>add to cart</p>
+							</button>
+						</div>
+						<div class="item-sale-3 item-for-tablet">
+							<img src="img/iPad/item-sale3.jpg">
+							<span class="name">MIMOSA LACE DRESS</span><br>
+							<span class="price">$76.95</span>
+							<button class="add-item style-for-buttons"><p>add to cart</p>
+							</button>
+						</div>
+						<div class="item-sale-4 sale-icon item-for-tablet">
+							<img src="img/iPad/item-sale4.jpg">
+							<span class="name">MIMOSA LACE DRESS</span><br>
+							<span class="price">$76.95</span>
+							<button class="add-item style-for-buttons"><p>add to cart</p>
+							</button>
+						</div>
+						<div class="item-sale-5 item-for-tablet">
+							<img src="img/iPad/item-sale5.jpg">
+							<span class="name">MIMOSA LACE DRESS</span><br>
+							<span class="price">$76.95</span>
+							<button class="add-item style-for-buttons"><p>add to cart</p>
+							</button>
+						</div>
+						<div class="item-sale-6 sale-icon item-for-pc">
+							<img src="img/iPad/item-sale4.jpg">
+							<span class="name">MIMOSA LACE DRESS</span><br>
+							<span class="price">$76.95</span>
+							<button class="add-item style-for-buttons"><p>add to cart</p>
+							</button>
+						</div>
+					</div>
+						<button class="load-more">load more</button> 
+			</div>
+		</main>
+
+		<div class="fav-brands"><h1 class="brands-title"> favourite brands <h1><div class="fbrands"></div></div>
+
+		<div class="about-lookshop">
+			<h1> About Lookshop</h1>
+			<p> This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. </p>
+		</div>
+
+		<div class="available-cards">
+			<p>We accept</p><img src="img/iPad/available-cards.png" alt="">
+		</div>
+
+		<footer class="footer clearfix">
+			<div class="footer-menu">
+				<div class="footer-menu-links">
+					<ul>
+						<li><h4>Customer Services</h4></li>
+						<li><a href="#">Contact</a></li>
+						<li><a href="#">FAQ</a></li>
+						<li><a href="#">Terms of payment</a></li>
+						<li><a href="#">Terms of sale</a></li>
+						<li><a href="#">Delivery terms and conditions</a></li>
+						<li><a href="#">Returns and refunds</a></li>
+					</ul>
+					<ul>
+						<li><h4>Affiliate</h4></li>
+						<li><a href="#">Cookies</a></li>
+						<li><a href="#">How To Shop</a></li>
+						<li><a href="#">About Nelly</a></li>
+						<li><a href="#">Investor relations</a></li>
+					</ul>
+					<ul>
+						<li><h4>Campaings</h4></li>
+						<li><a href="#">Evening dresses</a></li>
+						<li><a href="#">MakeUp</a></li>
+						<li><a href="#">Fashion forwards</a></li>
+						<li><a href="#">Training Clothes</a></li>
+						<li><a href="#">Special Ocassion Clothes</a></li>
+					</ul>
+					<ul>
+						<li><h4>Stores</h4></li>
+						<li><a href="#">Paris</a></li>
+						<li><a href="#">New-Yourk</a></li>
+						<li><a href="#">London</a></li>
+						<li><a href="#">Madrid</a></li>
+						<li><a href="#">Tokio</a></li>
+					</ul>
+				</div>
+				<div class="footer-menu-social">
+					<h4>Social</h4>
+					<a href="#"	class="footer-social-twitter"></a>
+					<a href="#"	class="footer-social-pinterest"></a>
+					<a href="#"	class="footer-social-facebook"></a>
+					<a href="#"	class="footer-social-google"></a>
+					<a href="#"	class="footer-social-tumblr"></a>
+					<a href="#"	class="footer-social-vimeo"></a>
+				</div>
+				<img src="img/iPad/secured.png" alt="">
+			</div>
+			<div class="copyright clearfix">
+				<button class="open-nav"><img src="img/iPhone/burger.png"></button>
+				<ul>
+					<li><a href="#">Privacy & Cookies </a></li>
+					<li><a href="#">Terms & Conditions</a></li>
+					<li><a href="#">Accessibility</a></li>
+					<li><a href="#">Store Directory</a></li>
+					<li><a href="#">About Us</a></li>
+				</ul>
+				<span>© LookShop.com<br>
+			All Rights Reserved</span>
+			</div>
+		</footer>
+	</div>
 </body>
