--- a/index.html
+++ b/index.html
@@ -1,277 +1,158 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JB0YJL6M62"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JB0YJL6M62');
-</script>
-	<meta charset="UTF-8">
-	<title>Lookshop</title>
-	<link rel="stylesheet" href="css/style.css">
-	
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Aggregator of hundreds useful materials on nutrition and sports.">
+    <title>BeFit</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="shortcut icon" href="img/icon.png">
 </head>
 <body>
-	<div class="wrapper">
-		<header class="header">
-			<span class="tlf"> custom care: 123 456 789 </span>
-			<div class="tools">
-				<span class="currency"> $ US </span>
-				<div class="acc"><a href="#">my account</a></div>
-				<a href="#" class="search"><img src="img/iPhone/search.png"></a>
-			</div>	
-		</header>
-
-		<img src="img/iPhone/logo.png" alt="" class="logo">
-		
-		<div class="cart-all clearfix">
-			<div class="prev-cart"><p>Your cart</p>
-			</div>
-			<div class="cart">
-				<img src="img/iPhone/cart.png">
-				<span>0 items  |  $ 0</span>
-			</div>	
-		</div>
-		<div class="menu-for-desktop">
-			<ul>
-				<li><a href="#">new</a></li>
-				<li><a href="#">designers</a></li>
-				<li><a href="#">women</a></li>
-				<li><a href="#">men</a></li>
-				<li><a href="#">clearance</a></li>
-			</ul>
-		</div>
-	
-		<div class="menu clearfix"> 
-				<input type="checkbox" name="accordion" id="ac-1">
-				<label for="ac-1">menu</label>
-				<article>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error culpa provident ut ex ducimus. Dignissimos, nobis distinctio libero nemo. Accusamus id asperiores dolor repellendus, omnis mollitia adipisci at nesciunt veniam.
-					</p>
-				</article>
-		</div>
-
-		<div class="banner clearfix">
-			<a href="#" class="ban-ctrl previous"></a>
-			<a href="#" class="ban-ctrl next"></a> 
-			<button class="ban-btn style-for-buttons">shop now  <b>&#707;</b></button>
-		</div>
-			
-
-		<div class="communication clearfix">
-			<div class="send-mail clearfix">
-				<label for="send-mail">Stay updated</label>
-				<input type="text" id="send-mail" placeholder="Your e-mail adress">
-				<button class="send-button style-for-buttons"> + </button>
-			</div>
-
-			<div class="social-tools">
-				<p> Find us here </p>
-				<div class="social-networks">
-					<a href="#"><img src="img/iPhone/facebook.png" alt=""></a>
-					<a href="#"><img src="img/iPhone/twitter.png" alt=""></a>
-					<a href="#"><img src="img/iPhone/pinterest.png" alt=""></a>
-				</div>
-			</div>
-		</div>
-		<img src="img/iPad/news.jpg" class="news">
-
-
-		<main class="main">
-			<div class="main_assortment">
-
-				<div class="hot clearfix assort-category"> 
-					<input type="checkbox"  class="hot" id="ac-hot" checked>
-					<label for="ac-hot">what's hot?</label>
-					<div class="designers assort-category">
-					<input type="checkbox"  class="designers" id="ac-designers">
-					<label for="ac-designers">designers</label>
-				</div>
-				<div class="featured assort-category">
-					<input type="checkbox"  class="featured" id="ac-featured">
-					<label for="ac-featured">featured</label>
-				</div>
-				<div class="latest assort-category">
-					<input type="checkbox"  class="latest" id="ac-latest">
-					<label for="ac-latest">latest</label>
-				</div>
-					<article>
-						<div class="hot-clothes">
-							<div class="items">						
-								<div class="item-hot-1 item-for-mobile clearfix">
-									<img src="img/iPhone/dress-1.jpg">
-									<span class="name">MIMOSA LACE DRESS</span><br>
-									<span class="price">$76.95</span>
-									<button class="add-item style-for-buttons"><p>add to cart</p>
-									</button>
-								</div>
-								<div class="item-hot-2 item-for-mobile clearfix">
-										<img src="img/iPhone/dress-2.png">
-										<span class="name">WishVitalise Dress</span><br>
-										<span class="price">$96.55</span>
-										<button class="add-item style-for-buttons"><p>add to cart</p>
-										</button>
-								</div>
-								<div class="item-hot-3 item-for-tablet clearfix">
-										<img src="img/iPad/item-hot3.jpg">
-										<span class="name">WishVitalise Dress</span><br>
-										<span class="price">$96.55</span>
-										<button class="add-item style-for-buttons"><p>add to cart</p>
-										</button>
-								</div>
-								<div class="item-hot-4 item-for-tablet sale-icon clearfix">
-									<img src="img/iPad/item-hot4.jpg">
-									<span class="name">WishVitalise Dress</span><br>
-									<span class="price">$96.55</span>
-									<button class="add-item style-for-buttons"><p>add to cart</p>
-									</button>
-								</div>
-								<div class="item-hot-5 item-for-tablet clearfix">
-									<img src="img/iPad/item-hot5.jpg">
-									<span class="name">WishVitalise Dress</span><br>
-									<span class="price">$96.55</span>
-									<button class="add-item style-for-buttons"><p>add to cart</p>
-									</button>
-								</div>
-								<div class="item-hot-6 sale-icon item-for-pc clearfix">
-									<img src="img/iPhone/dress-2.png">
-									<span class="name">WishVitalise Dress</span><br>
-									<span class="price">$96.55</span>
-									<button class="add-item style-for-buttons"><p>add to cart</p>
-									</button>
-								</div>
-							</div>
-							<button class="load-more">load more</button> 
-						</div>
-					</article>
-				</div>
-				
-			</div>
-
-			<div class="sale clearfix">
-					<div class="off-img"></div>
-					<div class="items">						
-						<div class="item-sale-1 item-for-mobile">
-							<img src="img/iPhone/bag1.jpg">
-							<span class="name">MIMOSA LACE DRESS</span><br>
-							<span class="price">$76.95</span>
-							<button class="add-item style-for-buttons"><p>add to cart</p>
-							</button>
-						</div>
-						<div class="item-sale-2 item-for-mobile clearfix">
-							<img src="img/iPhone/bag2.jpg">
-							<span class="name">MIMOSA LACE DRESS</span><br>
-							<span class="price">$76.95</span>
-							<button class="add-item style-for-buttons"><p>add to cart</p>
-							</button>
-						</div>
-						<div class="item-sale-3 item-for-tablet">
-							<img src="img/iPad/item-sale3.jpg">
-							<span class="name">MIMOSA LACE DRESS</span><br>
-							<span class="price">$76.95</span>
-							<button class="add-item style-for-buttons"><p>add to cart</p>
-							</button>
-						</div>
-						<div class="item-sale-4 sale-icon item-for-tablet">
-							<img src="img/iPad/item-sale4.jpg">
-							<span class="name">MIMOSA LACE DRESS</span><br>
-							<span class="price">$76.95</span>
-							<button class="add-item style-for-buttons"><p>add to cart</p>
-							</button>
-						</div>
-						<div class="item-sale-5 item-for-tablet">
-							<img src="img/iPad/item-sale5.jpg">
-							<span class="name">MIMOSA LACE DRESS</span><br>
-							<span class="price">$76.95</span>
-							<button class="add-item style-for-buttons"><p>add to cart</p>
-							</button>
-						</div>
-						<div class="item-sale-6 sale-icon item-for-pc">
-							<img src="img/iPad/item-sale4.jpg">
-							<span class="name">MIMOSA LACE DRESS</span><br>
-							<span class="price">$76.95</span>
-							<button class="add-item style-for-buttons"><p>add to cart</p>
-							</button>
-						</div>
-					</div>
-						<button class="load-more">load more</button> 
-			</div>
-		</main>
-
-		<div class="fav-brands"><h1 class="brands-title"> favourite brands <h1><div class="fbrands"></div></div>
-
-		<div class="about-lookshop">
-			<h1> About Lookshop</h1>
-			<p> This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. </p>
-		</div>
-
-		<div class="available-cards">
-			<p>We accept</p><img src="img/iPad/available-cards.png" alt="">
-		</div>
-
-		<footer class="footer clearfix">
-			<div class="footer-menu">
-				<div class="footer-menu-links">
-					<ul>
-						<li><h4>Customer Services</h4></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">FAQ</a></li>
-						<li><a href="#">Terms of payment</a></li>
-						<li><a href="#">Terms of sale</a></li>
-						<li><a href="#">Delivery terms and conditions</a></li>
-						<li><a href="#">Returns and refunds</a></li>
-					</ul>
-					<ul>
-						<li><h4>Affiliate</h4></li>
-						<li><a href="#">Cookies</a></li>
-						<li><a href="#">How To Shop</a></li>
-						<li><a href="#">About Nelly</a></li>
-						<li><a href="#">Investor relations</a></li>
-					</ul>
-					<ul>
-						<li><h4>Campaings</h4></li>
-						<li><a href="#">Evening dresses</a></li>
-						<li><a href="#">MakeUp</a></li>
-						<li><a href="#">Fashion forwards</a></li>
-						<li><a href="#">Training Clothes</a></li>
-						<li><a href="#">Special Ocassion Clothes</a></li>
-					</ul>
-					<ul>
-						<li><h4>Stores</h4></li>
-						<li><a href="#">Paris</a></li>
-						<li><a href="#">New-Yourk</a></li>
-						<li><a href="#">London</a></li>
-						<li><a href="#">Madrid</a></li>
-						<li><a href="#">Tokio</a></li>
-					</ul>
-				</div>
-				<div class="footer-menu-social">
-					<h4>Social</h4>
-					<a href="#"	class="footer-social-twitter"></a>
-					<a href="#"	class="footer-social-pinterest"></a>
-					<a href="#"	class="footer-social-facebook"></a>
-					<a href="#"	class="footer-social-google"></a>
-					<a href="#"	class="footer-social-tumblr"></a>
-					<a href="#"	class="footer-social-vimeo"></a>
-				</div>
-				<img src="img/iPad/secured.png" alt="">
-			</div>
-			<div class="copyright clearfix">
-				<button class="open-nav"><img src="img/iPhone/burger.png"></button>
-				<ul>
-					<li><a href="#">Privacy & Cookies </a></li>
-					<li><a href="#">Terms & Conditions</a></li>
-					<li><a href="#">Accessibility</a></li>
-					<li><a href="#">Store Directory</a></li>
-					<li><a href="#">About Us</a></li>
-				</ul>
-				<span>© LookShop.com<br>
-			All Rights Reserved</span>
-			</div>
-		</footer>
-	</div>
+    <div class="wrapper">
+        <nav>
+           <img src="img/logo.png" alt="BeFit Logo">
+            <ul class="desktop-nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About the project</a></li>
+                <li><a href="bmi-calculator.html">BMI calculator</a></li>
+            </ul>
+            <button class="subscribe">Subscribe</button>
+            <div class="overlay">
+                <div class="subscribeField">
+                    <p>Get an extra bonus from us and be the first who'll know about our start!</p>
+                    <form action="https://formspree.io/lilly.garkushko@gmail.com" method="POST" enctype="text/plain" >
+                        <label for="nameSub"> Your name
+                            <input type="text" name="nameSub" id="nameSub" required>        
+                        </label>    
+                        <label for="mailSub"> Your email
+                            <input type="email" name="mailSub" id="mailSub" required>
+                        </label>
+                        <button type="submit">Subscribe now</button>
+                        <button type="button" class="closeSubscribe">Back</button>
+                    </form>
+                </div> 
+            </div>
+            <div class="burger-menu">
+                <input id="burger" type="checkbox" />
+                <label for="burger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+                <div class="navigation">    
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="bmi-calculator.html">BMI calculator</a></li>
+                    </ul>  
+                </div>
+            </div>
+        </nav>
+        <header class="content-center">
+            <div class="headerText">
+                <h1>Be a better version of yourself with BeFit</h1>
+                <p>Get the most relevant and useful content on fitness, nutrition, and well-being. </p>           
+                <p>Curently, we're looking for best materials. Subscribe to be the first to become a member of our community.</p>
+                <button class="subscribe-everywhere">Subscribe</button>
+            </div>
+            <img src="img/yoga-girl-first.png" alt="yog girl">
+            <a class="scroll"><span></span>Scroll</a>
+        </header>
+    </div>
+    <main>
+        <article class="whySection">
+            <h2>Why Use BeFit</h2>
+            <p>Access hundreds of useful materials on  sports,  diet and nutrition, and many others</p>
+            <div class="advantages"> 
+                <section class="advantage">
+                    <img src="img/why-first.png" alt="Regular updates">
+                    <h3>Regular updates</h3>
+                    <p>New materials every Wednesday and Friday</p>
+                </section>
+                <section class="advantage">
+                    <img src="img/why-second.png" alt="Content curation">
+                    <h3>Content curation</h3>
+                    <p>We spend hours every day to find best materials for you</p>  
+                </section>
+                <section class="advantage">
+                    <img src="img/why-third.png" alt="Personalized Content">
+                    <h3>Personalized Content</h3>
+                    <p>Choose topics you’re interested in and enjoy </p>    
+                </section>
+            </div>    
+        </article>
+        <article class="whatSection content-center">
+            <h2>What's on BeFit</h2>
+            <div class="whatComponents">
+                <img src="img/yoga-girl-second.png" alt="Yoga pose">
+                <div class="components">
+                    <section>
+                        <img src="img/checklist.png" alt="checklist">
+                        <h3>Videos</h3>
+                        <p>Discover hundreds of  useful videos. Save your favorites, try new styles and customize your routine to fit your schedule</p>
+                    </section>
+                    <section>
+                        <img src="img/checklist.png" alt="checklist">
+                        <h3>Articles</h3>
+                        <p>Special for you, we’ve created a list of  inightful articles and books, choose a category and see best books on topic</p>
+                    </section>
+                    <section>
+                        <img src="img/checklist.png" alt="checklist">
+                        <h3>BMI Calculator</h3>
+                        <p>Calculate your body mass index to get personalized recommendations on nutrition</p>
+                    </section>
+                </div>
+            </div>
+        </article>
+        <article class="blogSection content-center">
+            <h2>Discover Interesting Articles</h2>
+            <div class="blog">
+                <img src="img/yoga-girl-third.png" alt="Stretching">
+                <section class="blogContent">
+                    <h3>How to Develop a Diet and Nutrition App: Main Features and Useful Tips </h3>
+                    <p>Wellness and healthy lifestyles have become mainstream. Interest in fitness applications and revenue from them grow as fast as the number of people striving to be fit.</p>
+                    <p>Previously, we’ve described the main types of fitness apps. Now it’s time to deepen your knowledge about a particular type of fitness application – diet and nutrition apps. According to a Statista survey conducted in 2017, 26 percent of respondents aged 18 to 29 regularly used apps to track their nutrition.</p>
+                    <p>In this article, you’ll discover the core features of a nutrition app and the efficient ways to overtake the leaders in the mHealth app market.</p>
+                    <a href="https://yalantis.com/blog/diet-and-nutrition-app-development/">Read more ></a>
+                </section>
+            </div>
+        </article>
+        <article class="videoSection">
+            <h2>Watch Cool Videos</h2>
+            <video src="media/video.mp4" controls>
+            Oops, seems your browser doesn't support videos
+            </video>
+        </article>
+        <div id="CTA-link">
+        <a href="under-development.html">Wow! I want more!</a>
+        </div>
+    </main>
+    <footer>
+        <section class="thanks-ftr">
+            <p>Special thanks to</p>
+            <p><a href="http://slabdsgn.com/"> SLAB! Design Studio</a> for freebie</p>
+            <p><a href="https://www.freepik.com/free-photos-vectors/people">Freepik</a> for illustrations</p>    
+        </section>
+        <section class="about-ftr">
+            <p>About</p>
+            <ul>   
+                <li><a href="about.html">Project</a></li>
+                <li><a href="about.html#author">Author</a></li>
+                <li><a href="about.html#mission">Mission</a></li>
+            </ul> 
+        </section>
+        <section class="foryou-ftr">
+            <p>For you</p>
+            <ul>
+                <li><a href="bmi-calculator.html">BMI Calculator</a></li>
+                <li><a href="under-development.html">Useful Links</a></li>
+                <li><a href="under-development.html">Useful Videos</a></li>
+            </ul>
+        </section>
+        <p class="copyright">Copyright © 2019 BerYoga All rights reserved.</p>
+    </footer>
+    <script src="js/script.js"></script>
 </body>
+</html>
