added GA, GA disclaimer, commented index content
New design and content coming soon. Rethinking the concept of the site and creating design from scratch

--- a/index.html
+++ b/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Aggregator of hundreds useful materials on nutrition and sports.">
-    <title>BeFit</title>
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="shortcut icon" href="img/icon.png">
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-JB0YJL6M62"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-JB0YJL6M62');
+	</script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="description" content="This site is just my tribute to manga artists and manga in general. ">
+	<title>A bit of Manga</title>
+	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="shortcut icon" href="img/icon.png">
 </head>
+
 <body>
-    <div class="wrapper">
-        <nav>
+	<div class="wrapper">
+		<h1>New content coming soon...</h1>
+		<div class="disclaimer">
+			<p>Please note that this webiste is used for learning Google analytics and hence uses GA. </br>
+				It's primary goal is to help me discover how to implement GA4 to the website.</p>
+			<button id="disclaimer_ack">Acknowledged</button>
+		</div>	
+	</div>
+		<!-- <nav>
            <img src="img/logo.png" alt="BeFit Logo">
             <ul class="desktop-nav">
                 <li><a href="index.html">Home</a></li>
@@ -22,7 +41,6 @@
             <div class="overlay">
                 <div class="subscribeField">
                     <p>Get an extra bonus from us and be the first who'll know about our start!</p>
-                    <form action="https://formspree.io/lilly.garkushko@gmail.com" method="POST" enctype="text/plain" >
                         <label for="nameSub"> Your name
                             <input type="text" name="nameSub" id="nameSub" required>        
                         </label>    
@@ -54,7 +72,6 @@
             <div class="headerText">
                 <h1>Be a better version of yourself with BeFit</h1>
                 <p>Get the most relevant and useful content on fitness, nutrition, and well-being. </p>           
-                <p>Curently, we're looking for best materials. Subscribe to be the first to become a member of our community.</p>
                 <button class="subscribe-everywhere">Subscribe</button>
             </div>
             <img src="img/yoga-girl-first.png" alt="yog girl">
@@ -152,7 +169,8 @@
             </ul>
         </section>
         <p class="copyright">Copyright © 2019 BerYoga All rights reserved.</p>
-    </footer>
-    <script src="js/script.js"></script>
+    </footer> -->
+		<script src="js/script.js"></script>
 </body>
+
 </html>
