--- a/under-development.html
+++ b/under-development.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    	<!-- Google tag (gtag.js) -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-JB0YJL6M62"></script>
+ <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
+ 
+   gtag('config', 'G-JB0YJL6M62');
+ </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wait a bit</title>
     <link rel="stylesheet" href="css/under-development.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/icon.png">
 </head>
 <body>
