--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="description" content="This site is just my tribute to manga artists and manga in general. ">
-	<title>A bit of Manga</title>
+	<title>Manga Corner</title>
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/icon.png">
@@ -27,149 +27,9 @@
 		<div class="disclaimer">
 			<p>Please note that this webiste is used for learning Google analytics and hence uses GA. </br>
 				It's primary goal is to help me discover how to implement GA4 to the website.</p>
-			<button id="disclaimer_ack">Acknowledged</button>
+			<button id="disclaimer_ack" class="button__secondary">Acknowledged</button>
 		</div>	
 	</div>
-		<!-- <nav>
-           <img src="img/logo.png" alt="BeFit Logo">
-            <ul class="desktop-nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About the project</a></li>
-                <li><a href="bmi-calculator.html">BMI calculator</a></li>
-            </ul>
-            <button class="subscribe">Subscribe</button>
-            <div class="overlay">
-                <div class="subscribeField">
-                    <p>Get an extra bonus from us and be the first who'll know about our start!</p>
-                        <label for="nameSub"> Your name
-                            <input type="text" name="nameSub" id="nameSub" required>        
-                        </label>    
-                        <label for="mailSub"> Your email
-                            <input type="email" name="mailSub" id="mailSub" required>
-                        </label>
-                        <button type="submit">Subscribe now</button>
-                        <button type="button" class="closeSubscribe">Back</button>
-                    </form>
-                </div> 
-            </div>
-            <div class="burger-menu">
-                <input id="burger" type="checkbox" />
-                <label for="burger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </label>
-                <div class="navigation">    
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="bmi-calculator.html">BMI calculator</a></li>
-                    </ul>  
-                </div>
-            </div>
-        </nav>
-        <header class="content-center">
-            <div class="headerText">
-                <h1>Be a better version of yourself with BeFit</h1>
-                <p>Get the most relevant and useful content on fitness, nutrition, and well-being. </p>           
-                <button class="subscribe-everywhere">Subscribe</button>
-            </div>
-            <img src="img/yoga-girl-first.png" alt="yog girl">
-            <a class="scroll"><span></span>Scroll</a>
-        </header>
-    </div>
-    <main>
-        <article class="whySection">
-            <h2>Why Use BeFit</h2>
-            <p>Access hundreds of useful materials on  sports,  diet and nutrition, and many others</p>
-            <div class="advantages"> 
-                <section class="advantage">
-                    <img src="img/why-first.png" alt="Regular updates">
-                    <h3>Regular updates</h3>
-                    <p>New materials every Wednesday and Friday</p>
-                </section>
-                <section class="advantage">
-                    <img src="img/why-second.png" alt="Content curation">
-                    <h3>Content curation</h3>
-                    <p>We spend hours every day to find best materials for you</p>  
-                </section>
-                <section class="advantage">
-                    <img src="img/why-third.png" alt="Personalized Content">
-                    <h3>Personalized Content</h3>
-                    <p>Choose topics you’re interested in and enjoy </p>    
-                </section>
-            </div>    
-        </article>
-        <article class="whatSection content-center">
-            <h2>What's on BeFit</h2>
-            <div class="whatComponents">
-                <img src="img/yoga-girl-second.png" alt="Yoga pose">
-                <div class="components">
-                    <section>
-                        <img src="img/checklist.png" alt="checklist">
-                        <h3>Videos</h3>
-                        <p>Discover hundreds of  useful videos. Save your favorites, try new styles and customize your routine to fit your schedule</p>
-                    </section>
-                    <section>
-                        <img src="img/checklist.png" alt="checklist">
-                        <h3>Articles</h3>
-                        <p>Special for you, we’ve created a list of  inightful articles and books, choose a category and see best books on topic</p>
-                    </section>
-                    <section>
-                        <img src="img/checklist.png" alt="checklist">
-                        <h3>BMI Calculator</h3>
-                        <p>Calculate your body mass index to get personalized recommendations on nutrition</p>
-                    </section>
-                </div>
-            </div>
-        </article>
-        <article class="blogSection content-center">
-            <h2>Discover Interesting Articles</h2>
-            <div class="blog">
-                <img src="img/yoga-girl-third.png" alt="Stretching">
-                <section class="blogContent">
-                    <h3>How to Develop a Diet and Nutrition App: Main Features and Useful Tips </h3>
-                    <p>Wellness and healthy lifestyles have become mainstream. Interest in fitness applications and revenue from them grow as fast as the number of people striving to be fit.</p>
-                    <p>Previously, we’ve described the main types of fitness apps. Now it’s time to deepen your knowledge about a particular type of fitness application – diet and nutrition apps. According to a Statista survey conducted in 2017, 26 percent of respondents aged 18 to 29 regularly used apps to track their nutrition.</p>
-                    <p>In this article, you’ll discover the core features of a nutrition app and the efficient ways to overtake the leaders in the mHealth app market.</p>
-                    <a href="https://yalantis.com/blog/diet-and-nutrition-app-development/">Read more ></a>
-                </section>
-            </div>
-        </article>
-        <article class="videoSection">
-            <h2>Watch Cool Videos</h2>
-            <video src="media/video.mp4" controls>
-            Oops, seems your browser doesn't support videos
-            </video>
-        </article>
-        <div id="CTA-link">
-        <a href="under-development.html">Wow! I want more!</a>
-        </div>
-    </main>
-    <footer>
-        <section class="thanks-ftr">
-            <p>Special thanks to</p>
-            <p><a href="http://slabdsgn.com/"> SLAB! Design Studio</a> for freebie</p>
-            <p><a href="https://www.freepik.com/free-photos-vectors/people">Freepik</a> for illustrations</p>    
-        </section>
-        <section class="about-ftr">
-            <p>About</p>
-            <ul>   
-                <li><a href="about.html">Project</a></li>
-                <li><a href="about.html#author">Author</a></li>
-                <li><a href="about.html#mission">Mission</a></li>
-            </ul> 
-        </section>
-        <section class="foryou-ftr">
-            <p>For you</p>
-            <ul>
-                <li><a href="bmi-calculator.html">BMI Calculator</a></li>
-                <li><a href="under-development.html">Useful Links</a></li>
-                <li><a href="under-development.html">Useful Videos</a></li>
-            </ul>
-        </section>
-        <p class="copyright">Copyright © 2019 BerYoga All rights reserved.</p>
-    </footer> -->
 		<script src="js/script.js"></script>
 </body>
 
